--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -22,7 +22,7 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
-    <PackageReleaseNotes>New throws assertion with condition</PackageReleaseNotes>
+    <PackageReleaseNotes>New throws assertion with condition. Enabled nullable</PackageReleaseNotes>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
