Handle That in Specification Add Some(enumerable) to provide pregenerated values that can later be mentioned individually or as a collection. Removed obsolete methods

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -18,11 +18,11 @@
     <PackageProjectUrl>https://github.com/joakimsigvald/XspecT</PackageProjectUrl>
     <RepositoryUrl>https://github.com/joakimsigvald/XspecT.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageVersion>18.3.0</PackageVersion>
+    <PackageVersion>18.4.0</PackageVersion>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
-    <PackageReleaseNotes>Made all negated assertions (such as NotNull) obsolete and made Not() negate the following assertion instead</PackageReleaseNotes>
+    <PackageReleaseNotes>Added Given().Some to provide pregenerated items. Removed obsolete methods. Fixed specification for That</PackageReleaseNotes>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
