--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -18,13 +18,13 @@
     <PackageProjectUrl>https://github.com/joakimsigvald/XspecT</PackageProjectUrl>
     <RepositoryUrl>https://github.com/joakimsigvald/XspecT.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageVersion>18.5.0</PackageVersion>
+    <PackageVersion>18.6.0</PackageVersion>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
-    <PackageReleaseNotes>Added tagged mentions - for more readable use of several values of the same type,
-    and delay on After, for test where timing between method invocations are essential,
-  removed obsolete test methods (use Not(). instead of prefix Not)</PackageReleaseNotes>
+    <PackageReleaseNotes>Improved usage of tags.
+    Added methods Given(tag).IsDefault() and Given(tag).IsUsed().
+    Removed special method Given().The(tag, value) and replaced it with Given(tag).Is(value)</PackageReleaseNotes>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
