--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -18,12 +18,12 @@
     <PackageProjectUrl>https://github.com/joakimsigvald/XspecT</PackageProjectUrl>
     <RepositoryUrl>https://github.com/joakimsigvald/XspecT.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageVersion>18.6.1</PackageVersion>
+    <PackageVersion>18.6.2</PackageVersion>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
     <PackageReleaseNotes>Added documentation.
-    Renamed Assertion 'Satisfies' to Has</PackageReleaseNotes>
+    Renamed Assertion 'Satisfies' to 'Has'</PackageReleaseNotes>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
