Add number of elements in result in error message on failing assert of Count or Single on IEnumerable

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -18,12 +18,11 @@
     <PackageProjectUrl>https://github.com/joakimsigvald/XspecT</PackageProjectUrl>
     <RepositoryUrl>https://github.com/joakimsigvald/XspecT.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageVersion>18.6.2</PackageVersion>
+    <PackageVersion>18.6.3</PackageVersion>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
-    <PackageReleaseNotes>Added documentation.
-    Renamed Assertion 'Satisfies' to 'Has'</PackageReleaseNotes>
+    <PackageReleaseNotes>Add number of elements in result in error message on failing assert of Count or Single on IEnumerable</PackageReleaseNotes>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
