Added Is to string-continuation, allowing: str.Is().Not().Null().But.Is('abc')

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -18,12 +18,11 @@
     <PackageProjectUrl>https://github.com/joakimsigvald/XspecT</PackageProjectUrl>
     <RepositoryUrl>https://github.com/joakimsigvald/XspecT.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageVersion>18.8.2</PackageVersion>
+    <PackageVersion>18.8.3</PackageVersion>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
-    <PackageReleaseNotes>
-      Added SomeOther with setup or transform to yield a different array of items with specific properties
+    <PackageReleaseNotes>Added Is to string-continuation, allowing: str.Is().Not().Null().But.Is('abc')
     </PackageReleaseNotes>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
