Only teardown if was setup

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -22,7 +22,7 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
-    <PackageReleaseNotes>Throw setup failed if transform throws exception</PackageReleaseNotes>
+    <PackageReleaseNotes>Throw setup failed if transform throws exception. Only teardown if setup was successful</PackageReleaseNotes>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
