Added assertion Has().Some([predicate]) for IEnumerations. Added Given(Tag) in pipeline. Removed obsolete Single

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -18,11 +18,11 @@
     <PackageProjectUrl>https://github.com/joakimsigvald/XspecT</PackageProjectUrl>
     <RepositoryUrl>https://github.com/joakimsigvald/XspecT.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageVersion>18.10.1</PackageVersion>
+    <PackageVersion>18.11.0</PackageVersion>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
-    <PackageReleaseNotes>Allow altering test data in the setup phase (After)</PackageReleaseNotes>
+    <PackageReleaseNotes>Added assertion Has().Some([predicate]) for IEnumerations. Added Given(Tag) in pipeline. Removed obsolete Single</PackageReleaseNotes>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
