--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -18,12 +18,14 @@
 		<PackageProjectUrl>https://github.com/joakimsigvald/XspecT</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/joakimsigvald/XspecT.git</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
-		<PackageVersion>19.1.3</PackageVersion>
+		<PackageVersion>19.1.4</PackageVersion>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageIcon>icon.png</PackageIcon>
 		<PackageReleaseNotes>
-			Overload of `Given.Using` to provide an instance of an interface for auto-mocking as type-argument, without explicitly instantiating it
+			Add constraint/transform as default to any type in a continuation with `Given` or `And`,
+			ex: `Given'int'(i => i > 0 ? i : -i).And'byte'(b => b % 2 == 0 ? b : 2 * b)`
+			Added assert Uppercase and Lowercase to `IsString`, ex: `The'string'().Is().Uppercase()`
 		</PackageReleaseNotes>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
